# spell-playground

./: .gitignore  README.md  Test.java
.metadata/: version.ini
TotalBeginner/: .project  MyScrapbook.jpage
bash/: e_laskin.sh  kb.sh  kb2.sh  number_of_files_matching_pattern.sh  pieru.sh  pieru2.sh  rename_pics.sh  save_xmonad_to_git.sh
c/: 1-10_make_specials_visible.c  1-11_mywc.c  1-12_word_per_line.c  1-13_length_of_words.c  1-3_temp_modified.c  1-4_celsius_to_fahrenheit.c  1-8_count_char_types.c  1-9_reduce_blanks.c  SyscallChmod.c  arguments.c  arrays.c  arrays_2.c  struct.c  temperature.c
cattledrive/: Sum.java
dev_academy/: Multiples.java  MultiplesSlim.java  backToTheFuture.js  backToTheFuture.rb
dotfiles/: .bash_aliases  .tmux.conf  .xmobarrc  .zshrc  configuration_xps13.nix  init.el  vim.nix  xmobarrc_xps13  xmonad.nix  xresources_xps13
elisp/: init.el  init.el_old  init_w.el  personal.el  snippet.el
font/: change_font.sh  font_list
haskell/: addVectors.hs  battleship_simple.hs  bintree.hs  bintree2.hs  caesar.hs  cardCheckSum.hs  cardValidation.hs  cardValidatorInSteps.hs  charName.hs  ex4.hs  ex5.hs  factorialTwo.hs  lenses.hs  lineInput.hs  myProduct.hs  mySum.hs  poker.hs  poker2.hs  qsort.hs  reverseSort.hs  sekuntteja.hs  speller.hs  starman.hs  summ.hs  towersOfHanoi.hs
java/: FontChanger.java  fonts.txt
lisp/: init.el  snippet.el
robot/: datetime_practice.py
ruby/: learning_tests.rb
rust/: option.rs
rust/blog_os/: Cargo.toml  README.md
rust/blog_os/.cargo/: config.toml
rust/blog_os/src/: main.rs
xmonad/: .xmobarrc  (+1 more)
(+177 files in other folders)
