[package]
name = "blog_os"
version = "0.1.0"
edition = "2021"

# Added the panic strategy abort to blog_os.json, so commenting these out
# [profile.dev]
# panic = "abort"

# [profile.release]
# panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


#[features] trying out different things to get it to compile when "cargo bootimage"
#getrandom = []
#rdrand = []


[dependencies]
bootloader = "0.9.23"
